--- a/source/_posts/等号、双等号和三等号.md
+++ b/source/_posts/等号、双等号和三等号.md
@@ -4,31 +4,34 @@ date: 2017-4-22 16:21:20
 tags: javascript
 ---
 
-<a href="" title="">一个等号是赋值操作，==先转换类型再比较，===先判断类型，如果不是同一类型直接为false。</a>
+<a href="" title="">一个等号是赋值操作，==先转换类型再比较，===先判断类型，如果不是同一类型直接为 false。</a>
 
 #### 双等号'=='
 
 > a == b
->> 如果a、b类型相等，就判断两个值是否相等，相等返回true不等返回false
->> 如果a、b类型不能等，根据下面规则进行类型转换再比较： 
-	如果一个是null、一个是undefined，那么返回true。 
-	如果一个是字符串，一个是数值，把字符串转换成数值再进行比较。 
-	如果任一值是 true，把它转换成 1 再比较；如果任一值是 false，把它转换成 0 再比较。 
-	如果一个是对象，另一个是数值或字符串，把对象转换成基础类型的值再比较。
-	任何其他组合，都返回false。
+>
+> > 如果 a、b 类型相等，就判断两个值是否相等，相等返回 true 不等返回 false
+> > 如果 a、b 类型不能等，根据下面规则进行类型转换再比较：
+
+    如果一个是null、一个是undefined，那么返回true。
+    如果一个是字符串，一个是数值，把字符串转换成数值再进行比较。
+    如果任一值是 true，把它转换成 1 再比较；如果任一值是 false，把它转换成 0 再比较。
+    如果一个是对象，另一个是数值或字符串，把对象转换成基础类型的值再比较。
+    任何其他组合，都返回false。
 
 #### 三等号'==='
 
 > a === b
->> 如果类型不同，直接返回false
-如果两个都是数值，并且是同一个值，那么返回true
-如果两个都是字符串，每个位置的字符都一样，那么返回true；否则返回false。 
-如果两个值都是true，或者都是false，那么返回true。 
-如果两个值都引用同一个对象或函数，那么返回true；否则false。 
-如果两个值都是null，或者都是undefined，那么返回true。
+>
+> > 如果类型不同，直接返回 false
+> > 如果两个都是数值，并且是同一个值，那么返回 true
+> > 如果两个都是字符串，每个位置的字符都一样，那么返回 true；否则返回 false。
+> > 如果两个值都是 true，或者都是 false，那么返回 true。
+> > 如果两个值都引用同一个对象或函数，那么返回 true；否则 false。
+> > 如果两个值都是 null，或者都是 undefined，那么返回 true。
 
 <!--more-->
 
- 文章参考<a href="http://www.jsjtt.com/webkaifa/javaScript/37.html">js 一个等号"=" 二个等号"==" 三个等号"===" 的区别</a> 
+文章参考<a href="https://www.jsjtt.com/webkaifa/javaScript/37.html">js 一个等号"=" 二个等号"==" 三个等号"===" 的区别</a>
 
 > 这周三被虐了，宝宝不服！哼~
