--- a/source/_posts/终于有了博客.md
+++ b/source/_posts/终于有了博客.md
@@ -4,24 +4,20 @@ date: 2016/4/4 20:46:25
 tags: 生活
 ---
 
-  不好意思~出生的这天恰好是 ---- 清明节
+不好意思~出生的这天恰好是 ---- 清明节
 
-  今天加昨天，虽然还不是很明白，但是它上线了阿~！请允许我开心的转个圈~！
-  中间真的踩了很多坑
+今天加昨天，虽然还不是很明白，但是它上线了阿~！请允许我开心的转个圈~！
+中间真的踩了很多坑
 
-  在群里--
-  小伙伴：你用便携版吧
-  我说：我都到了这一步了，不能放弃啊~！%>_<%
-  小伙伴：才。。这一步 o(╯□╰)o
-  无论如何也过了那一步啦嘛~还是很骄傲滴
-  在此真心的感谢群里的大神们~很有耐心
+在群里--
+小伙伴：你用便携版吧
+我说：我都到了这一步了，不能放弃啊~！%>\_<%
+小伙伴：才。。这一步 o(╯□╰)o
+无论如何也过了那一步啦嘛~还是很骄傲滴
+在此真心的感谢群里的大神们~很有耐心
+
 <!--more-->
-	来一发我男神~
-	
-  <img src="http://7xslws.com2.z0.glb.clouddn.com/C7C09A821A74AFCCC7B9AF10F27E0FCC.jpeg">
-  
 
+    来一发我男神~
 
-
-
-
+  <img src="https://7xslws.com2.z0.glb.clouddn.com/C7C09A821A74AFCCC7B9AF10F27E0FCC.jpeg">
