--- a/source/_posts/一篇走心的博客.md
+++ b/source/_posts/一篇走心的博客.md
@@ -8,22 +8,28 @@ tags: 生活
 
 讲讲缘由。
 
-今天上午看组成原理有个知识点看不懂了，然后打开网易公开课找解决办法，然后不自觉的看了个TED视频，题目是<a href="http://open.163.com/movie/2016/3/F/E/MBFLN6BJF_MBFLNJGFE.html">《如何成为一个更好的交谈者》</a>。她讲了10个原则，我感觉我有几条中枪了~（不是原话，都是大意）
+今天上午看组成原理有个知识点看不懂了，然后打开网易公开课找解决办法，然后不自觉的看了个 TED 视频，题目是<a href="https://open.163.com/movie/2016/3/F/E/MBFLN6BJF_MBFLNJGFE.html">《如何成为一个更好的交谈者》</a>。她讲了 10 个原则，我感觉我有几条中枪了~（不是原话，都是大意）
 1、和别人聊天时听别人讲完别人的情况或遭遇时不要直接就说自己也是怎么怎么样，没有两个人的经历是完全一样的，说出来希望得到的是倾听。
 2、别人说一个问题时，不是在倾听，而是在想如何更好的回复别人，或者想到一个新的有趣的事情然后就把别人的上一个问题给忽略了~这样对别人很不尊重的
-3、不要自己有一个新观点时就和讲给别人听，别人不care的，如果实在想说就写在博客里阿~（这条让我决定写这篇文章）
+3、不要自己有一个新观点时就和讲给别人听，别人不 care 的，如果实在想说就写在博客里阿~（这条让我决定写这篇文章）
 
 <!--more-->
+
 我觉得上边的三个毛病我都有犯~
+
 <li>我有时听到别人的情况联想到自己的情况，然后bala说一通，当时的感觉是听者应该很开心，找到了共鸣，后来换位思考下，若果我和别人说完一件事情后别人就开始说自己的也怎样怎样，这样的感觉真的很不好</li>
 
 <li>我有时也会想到一个有趣的事情时就忽略别人的上一个话题，我有时有一个新观点时也会和主动和别人谈起。当时的想法是：这么有趣的事=事情一定要分享阿！然后又换位思考了下，如果别人突然和我说她对恋爱改变了新看法，我：:)（你有病昂）</li>
 
 <li>思考如何去回答别人是我最大的问题，害怕说的不对不好，害怕说的太肤浅，反而忽略了最重要的东西--倾听</li>
 
+写这篇文章表示我有反思我自己，而且我非常同意她的观点，生活中你有很多话想说，很多时候大家并不关心你的想法可能也不想听，所以你可以写到你的博客里。
 
- 写这篇文章表示我有反思我自己，而且我非常同意她的观点，生活中你有很多话想说，很多时候大家并不关心你的想法可能也不想听，所以你可以写到你的博客里。
- >```
- 想起一句话:
- 好朋友不是见了面有说不完的话，而是即使不说话也不觉得尴尬。
- ```
+> ```
+>  想起一句话:
+>  好朋友不是见了面有说不完的话，而是即使不说话也不觉得尴尬。
+> ```
+
+```
+
+```
