--- a/source/_posts/文本框跟随鼠标移动.md
+++ b/source/_posts/文本框跟随鼠标移动.md
@@ -8,10 +8,13 @@ tags: JavaScript
 关于这个知识点，我原来看过三遍总觉得自己学会了，今天再用发现还得查资料，这样可不行啊！
 ```
 
-#### 实现效果--><a href="http://maxiuli.com/LIFE/step3/task37/index.html">查看效果</a>：
+#### 实现效果--><a href="https://maxiuli.com/LIFE/step3/task37/index.html">查看效果</a>：
+
 鼠标点击文本框的标题，文本框跟着鼠标移动，鼠标松开文本框不再移动。
-<img src="http://7xslws.com1.z0.glb.clouddn.com/QQ%E5%9B%BE%E7%89%8720160720193151.png">
+<img src="https://7xslws.com1.z0.glb.clouddn.com/QQ%E5%9B%BE%E7%89%8720160720193151.png">
+
 #### 知识点：
+
 <!--more-->
 <ul>
 <li>event.clientX： 事件属性返回当事件被触发时鼠标指针向对于浏览器页面（或客户区）的水平坐标</li>
@@ -27,18 +30,19 @@ tags: JavaScript
 </ul>
 
 #### 整体思路
- (感觉一张好图胜过千言万语)
-<img src="http://7xslws.com1.z0.glb.clouddn.com/QQ%E5%9B%BE%E7%89%8720160720195603.png">
 
-> 鼠标点下的时候执行 ommousedown，计算clientX，clientY,offsetLeft,offsetTop
-（此时clientX，clientY是点击时的坐标）
-求出disX = clientX - offsetLeft,disY = clientY - offsetTop
-执行 onmousemove，对弹框定位 left = clientX - disX，top = clientY - disY
-（此时clientX和clientY是移动后的坐标，是随时变化的）
+(感觉一张好图胜过千言万语)
+<img src="https://7xslws.com1.z0.glb.clouddn.com/QQ%E5%9B%BE%E7%89%8720160720195603.png">
+
+> 鼠标点下的时候执行 ommousedown，计算 clientX，clientY,offsetLeft,offsetTop
+> （此时 clientX，clientY 是点击时的坐标）
+> 求出 disX = clientX - offsetLeft,disY = clientY - offsetTop
+> 执行 onmousemove，对弹框定位 left = clientX - disX，top = clientY - disY
+> （此时 clientX 和 clientY 是移动后的坐标，是随时变化的）
 
 #### 上代码
 
-``` javascript
+```javascript
 function move() {
 	var oTitle = document.getElementById("title");
 	//点击时
@@ -60,7 +64,7 @@ function move() {
 ```
 
 #### 其他
-> 在JS中修改关于尺寸时要加单位“px”
-这样弹框可以拉到屏幕以外的位置，可以根据自己的需求更改
-可以参考课程<a href="http://www.imooc.com/learn/138">DOM事件揭秘第四章</a>
 
+> 在 JS 中修改关于尺寸时要加单位“px”
+> 这样弹框可以拉到屏幕以外的位置，可以根据自己的需求更改
+> 可以参考课程<a href="https://www.imooc.com/learn/138">DOM 事件揭秘第四章</a>
